--- a/taixinkanghu/src/main/res/values/styles.xml
+++ b/taixinkanghu/src/main/res/values/styles.xml
@@ -1,31 +1,54 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <style name="AppTheme" parent="@android:style/Theme.Light.NoTitleBar" />
 
-	<!-- Base application theme. -->
-	<!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-	<style name="AppTheme" parent="@android:style/Theme.Light.NoTitleBar" >
-		<!-- Customize your theme here. -->
-	</style>
 
-	<style name="home_radio_button_style">
+    <style name="MyProgressDialog" parent="@android:style/Theme.Dialog">
 
-		<item name="android:textSize">12.0sp</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
 
-		<item name="android:textColor">#cc0000</item>
+        <item name="android:windowFrame">@null</item>
 
-		<item name="android:gravity">center</item>
+        <item name="android:windowNoTitle">true</item>
 
-		<item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:windowIsFloating">true</item>
 
-		<item name="android:background">@null</item>
+        <item name="android:windowIsTranslucent">false</item>
 
-		<item name="android:layout_width">0.0dip</item>
+        <item name="android:backgroundDimEnabled">false</item>
 
-		<item name="android:layout_height">fill_parent</item>
+    </style>
 
-		<item name="android:button">@null</item>
+    <style name="home_radio_button_style">
 
-		<item name="android:layout_weight">1.0</item>
+        <item name="android:textSize">12.0sp</item>
 
-	</style>
+        <item name="android:textColor">#cc0000</item>
 
+        <item name="android:gravity">center</item>
+
+        <item name="android:layout_gravity">center_horizontal</item>
+
+        <item name="android:background">@null</item>
+
+        <item name="android:layout_width">0.0dip</item>
+
+        <item name="android:layout_height">fill_parent</item>
+
+        <item name="android:button">@null</item>
+
+        <item name="android:layout_weight">1.0</item>
+
+    </style>
+
+    <style name="umeng_fb_image_dialog_anim">
+
+    </style>
+
+    <style name="umeng_fb_speech_dialog_style" parent="@android:style/Theme.Dialog">
+
+        <item name="android:windowBackground">@android:color/transparent</item>
+
+        <item name="android:backgroundDimEnabled">false</item>
+
+    </style>
 </resources>
