--- a/taixinkanghu/src/main/res/layout/activity_welcome.xml
+++ b/taixinkanghu/src/main/res/layout/activity_welcome.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    tools:context="xiexie.lreanviewpagerdemo.welCome">
 
-	<ImageView
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:id="@+id/imageView"
-		android:background="@drawable/ic_activity_welcome"
-		android:contentDescription=""/>
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@mipmap/img_welcome"/>
+
 </LinearLayout>
