--- a/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/main_bg_color"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="138dip"
+        android:background="#00000000"></LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -34,6 +37,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_weight="1.0"
+            android:background="#ffffffff"
             android:divider="@color/divider_color"
             android:dividerHeight="0.100000024dip"
             android:listSelector="@drawable/bg_btn_translucent" />
