--- a/taixinkanghu/src/main/res/values/ids.xml
+++ b/taixinkanghu/src/main/res/values/ids.xml
@@ -133,4 +133,5 @@
     <item name="btn_bar" type="id">btn_bar</item>
     <item name="btn_submit" type="id">btn_submit</item>
     <item name="worker_pic" type="id">worker_pic</item>
+    <item name="btn_goto_main" type="id">btn_goto_main</item>
 </resources>
