--- a/taixinkanghu/src/main/res/layout/activity_customer_service.xml
+++ b/taixinkanghu/src/main/res/layout/activity_customer_service.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="xiezheng.com.taixinkanghu.dingdan">
+    tools:context="com.taixinkanghu.app.ui.activity.CustomerServiceActivity">
 
     <include layout="@layout/include_header" />
 
