--- a/taixinkanghu/src/main/res/layout/activity_main.xml
+++ b/taixinkanghu/src/main/res/layout/activity_main.xml
@@ -1,121 +1,125 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/title"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
     android:weightSum="1"
-    tools:context="xiezheng.com.taixinkanghu.MainActivity">
+    tools:context="com.taixinkanghu.app.ui.activity.MainActivity">
 
-    <!--logo+名称-->
-    <include layout="@layout/include_header" />
-
-    <!--公司介绍，滚动viewpager-->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/linearLayout2"
-        android:layout_below="@+id/linearLayout"
-        android:layout_weight="1"
-        android:background="#fff"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical">
+        <!--logo+名称-->
+        <include layout="@layout/include_header" />
 
-        <RelativeLayout
+        <!--公司介绍，滚动viewpager-->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/linearLayout2"
             android:layout_below="@+id/linearLayout"
-            android:layout_weight="4.0"
+            android:layout_weight="1"
             android:background="#fff"
             android:orientation="vertical">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewpager"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@mipmap/img_home_1"></android.support.v4.view.ViewPager>
-
-            <LinearLayout
-                android:id="@+id/ll"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/iv1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/login_point_selected"></ImageView>
-
-                <ImageView
-                    android:id="@+id/iv2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/login_point"></ImageView>
-
-            </LinearLayout>
-
-        </RelativeLayout>
-
-        <!--主要功能按钮-->
-        <FrameLayout
-            android:id="@+id/fragment"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3.0">
-
-
-            <FrameLayout
-                android:layout_width="fill_parent"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="4.0">
+                android:layout_above="@+id/linearLayout2"
+                android:layout_below="@+id/linearLayout"
+                android:layout_weight="4.0"
+                android:background="#fff"
+                android:orientation="vertical">
 
-            </FrameLayout>
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/viewpager"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:background="@mipmap/img_home_1"></android.support.v4.view.ViewPager>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview"
+                <LinearLayout
+                    android:id="@+id/ll"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/login_point_selected"></ImageView>
+
+                    <ImageView
+                        android:id="@+id/iv2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@mipmap/login_point"></ImageView>
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <!--主要功能按钮-->
+            <FrameLayout
+                android:id="@+id/fragment"
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="3.0">
-            </android.support.v7.widget.RecyclerView>
 
 
-            <!--<LinearLayout-->
+                <FrameLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4.0">
+
+                </FrameLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerview"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3.0"></android.support.v7.widget.RecyclerView>
+
+
+                <!--<LinearLayout-->
                 <!--android:layout_width="match_parent"-->
                 <!--android:layout_height="match_parent"-->
                 <!--android:orientation="vertical">-->
 
                 <!--<Button-->
-                    <!--android:id="@+id/ib_text"-->
-                    <!--android:layout_width="400dp"-->
-                    <!--android:layout_height="100dp"-->
-                    <!--android:layout_gravity="center_horizontal"-->
-                    <!--android:background="@drawable/bg_order_rb"-->
-                    <!--android:text="预约陪护" />-->
+                <!--android:id="@+id/ib_text"-->
+                <!--android:layout_width="400dp"-->
+                <!--android:layout_height="100dp"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:background="@drawable/bg_order_rb"-->
+                <!--android:text="预约陪护" />-->
 
 
                 <!--<Button-->
-                    <!--android:layout_width="400dp"-->
-                    <!--android:layout_height="100dp"-->
-                    <!--android:layout_gravity="center_horizontal"-->
-                    <!--android:background="@drawable/bg_order_rb"-->
-                    <!--android:text="康护辅助用品" />-->
+                <!--android:layout_width="400dp"-->
+                <!--android:layout_height="100dp"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:background="@drawable/bg_order_rb"-->
+                <!--android:text="康护辅助用品" />-->
 
 
                 <!--<Button-->
-                    <!--android:layout_width="400dp"-->
-                    <!--android:layout_height="100dp"-->
-                    <!--android:layout_gravity="center_horizontal"-->
-                    <!--android:background="@drawable/bg_order_rb"-->
-                    <!--android:text="功能尚未开启" />-->
-            <!--</LinearLayout>-->
+                <!--android:layout_width="400dp"-->
+                <!--android:layout_height="100dp"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:background="@drawable/bg_order_rb"-->
+                <!--android:text="功能尚未开启" />-->
+                <!--</LinearLayout>-->
 
-        </FrameLayout>
+            </FrameLayout>
+
+        </LinearLayout>
+
+        <!--底部功能菜单-->
+        <include layout="@layout/item_rg_main" />
 
     </LinearLayout>
-
-    <!--底部功能菜单-->
-    <include layout="@layout/item_rg_main" />
-
-</LinearLayout>
+</FrameLayout>
