--- a/taixinkanghu/src/main/res/layout/activity_sale_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_sale_info.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="xiezheng.com.taixinkanghu.Sale_info">
+    tools:context="com.taixinkanghu.app.ui.activity.SaleInfoActivity">
 
     <include layout="@layout/include_header"/>
 
@@ -22,6 +22,7 @@
         </ImageView>
 
         <TextView
+            android:id="@+id/info_title"
             android:layout_width="fill_parent"
             android:layout_height="35dip"
             android:gravity="center_vertical"
@@ -34,6 +35,7 @@
             android:background="@drawable/bg_order_rb">
 
             <TextView
+                android:id="@+id/info_text_red"
                 android:layout_width="fill_parent"
                 android:layout_height="30dip"
                 android:layout_marginLeft="10dip"
@@ -45,6 +47,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/info_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
