--- a/taixinkanghu/src/main/res/layout/fragment_select_sort.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_sort.xml
@@ -5,6 +5,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="138dip"
+        android:background="#00000000"></LinearLayout>
+
     <ListView
         android:id="@+id/listView_sort"
         android:layout_width="fill_parent"
