--- a/taixinkanghu/src/main/res/layout/fragment_selsct_city.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_selsct_city.xml
@@ -3,10 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="xiezheng.com.taixinkanghu.Selsct_city">
+    tools:context="com.taixinkanghu.app.ui.activity.SelectCity">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="93dip"
+        android:background="#00000000"
+        android:orientation="vertical" />
 
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#ffffffff">
@@ -42,7 +48,7 @@
                     android:textSize="14.0sp" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -69,8 +75,8 @@
                 android:gravity="center"
                 android:paddingBottom="8.0dip"
                 android:paddingTop="8.0dip"
-                android:textColor="@color/city_btn_color"
                 android:text="北京市"
+                android:textColor="@color/city_btn_color"
                 android:textSize="14.0sp"
                 android:visibility="visible" />
 
@@ -85,8 +91,8 @@
                 android:gravity="center"
                 android:paddingBottom="8.0dip"
                 android:paddingTop="8.0dip"
-                android:textColor="@color/city_btn_color"
                 android:text="天津市"
+                android:textColor="@color/city_btn_color"
                 android:textSize="14.0sp"
                 android:visibility="visible" />
 
