--- a/taixinkanghu/src/main/res/layout/include_main_button.xml
+++ b/taixinkanghu/src/main/res/layout/include_main_button.xml
@@ -6,7 +6,7 @@
 
 
     <Button
-        android:id="@id/btn_pay"
+        android:id="@id/btn_goto_main"
         android:layout_width="fill_parent"
         android:layout_height="48.0dip"
         android:background="@drawable/bg_btn_main_color"
