--- a/taixinkanghu/src/main/res/layout/item_worker_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_worker_list.xml
@@ -10,7 +10,7 @@
     android:orientation="horizontal"
     android:padding="10.0dip">
 
-    <xiezheng.com.taixinkanghu.widget.CircleImageView
+    <com.taixinkanghu.widget.circleimageview.CircleImageView
         android:id="@+id/pic"
         android:layout_width="65.0dip"
         android:layout_height="65.0dip"
