[modify] 解决引入控件viewflow的attrs.xml和gallery_attre.xml中，关于spacing的冲突问题。

--- a/taixinkanghu/src/main/res/values/gallery_attrs.xml
+++ b/taixinkanghu/src/main/res/values/gallery_attrs.xml
@@ -45,7 +45,7 @@
         <!-- Sets how long a transition animation should run (in milliseconds)
              when layout has changed.  Only relevant if animation is turned on. -->
         <attr name="animationDuration" format="integer" min="0" />
-        <attr name="spacing" format="dimension" />
+        <attr name="spacing_1" format="dimension" />
         <!-- Sets the alpha on the items that are not selected. -->
         <attr name="unselectedAlpha" format="float" />
     </declare-styleable>
