[modify]修改主页面公司图片/促销图片的名称，并更改在layout中不合适的图片命名格式。

--- a/taixinkanghu/src/main/res/layout/activity_sale_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_sale_info.xml
@@ -17,7 +17,7 @@
             android:id="@id/img_info"
             android:layout_width="fill_parent"
             android:layout_height="240dip"
-            android:background="@mipmap/img_home_1">
+            android:background="@mipmap/img_company">
 
         </ImageView>
 
