--- a/taixinkanghu/src/main/res/layout/activity_customer_service.xml
+++ b/taixinkanghu/src/main/res/layout/activity_customer_service.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="240dip"
-            android:background="@mipmap/img_home_1" />
+            android:background="@mipmap/img_company" />
 
         <LinearLayout
             android:layout_width="fill_parent"
