--- a/taixinkanghu/src/main/res/layout/activity_main.xml
+++ b/taixinkanghu/src/main/res/layout/activity_main.xml
@@ -40,7 +40,8 @@
                     android:id="@+id/viewpager"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:background="@mipmap/img_home_1"></android.support.v4.view.ViewPager>
+                    android:background="@mipmap/img_company"
+					android:layout_alignParentEnd="true"></android.support.v4.view.ViewPager>
 
                 <LinearLayout
                     android:id="@+id/ll"
