--- a/taixinkanghu/src/main/res/layout/one.xml
+++ b/taixinkanghu/src/main/res/layout/one.xml
@@ -8,6 +8,6 @@
         android:id="@+id/pagerview_iv1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@mipmap/img_home_1" />
+        android:background="@mipmap/img_company" />
 
 </LinearLayout>
