--- a/taixinkanghu/src/main/res/layout/two.xml
+++ b/taixinkanghu/src/main/res/layout/two.xml
@@ -8,6 +8,6 @@
         android:id="@+id/pagerview_iv2"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@mipmap/img_home_2" />
+        android:background="@mipmap/img_promotions" />
 
 </LinearLayout>
